Fix Session config for plugins in new MainWindows

BUG: 319854
REVIEW: 110731